--- a/themes/hugo-theme-cactus-plus/layouts/partials/post-list.html
+++ b/themes/hugo-theme-cactus-plus/layouts/partials/post-list.html
@@ -6,11 +6,17 @@
                 <aside class="dates">{{ .Date.Format "Jan 2" }}</aside>
                 <a href='{{ .Permalink }}'>
                     {{ .Title }}
+                    
                     {{ if .Site.Params.enableSummary }}
                         {{ if .Site.Params.useDescriptionReplaceSummary }}
                             <h2>{{ .Description | plainify }}</h2>
                         {{ else }}
-                            <h2>{{ .Summary | plainify }}</h2>
+                            <h2>{{ with .Description }}
+                                {{ $.Scratch.Set "summary" (markdownify .) }}
+                                  {{ else }}
+                                {{ $.Scratch.Set "summary" ((delimit (findRE "(<p.*?>(.|\n)*?</p>\\s*)+" .Content) "[&hellip;] ") | plainify | truncate (default 200 .Site.Params.summary_length) (default " &hellip;" .Site.Params.text.truncated ) | replaceRE "&amp;" "&" | safeHTML) }}
+                                {{ end }}
+                                  {{ $.Scratch.Get "summary" }}</h2>
                         {{ end }}
                     {{ end }}
                 </a>
