--- a/themes/hugo-theme-cactus-plus/static/css/style.css
+++ b/themes/hugo-theme-cactus-plus/static/css/style.css
@@ -932,3 +932,11 @@ a.symbol:hover {
 .page-tags ul li a:hover {
     color: #5694f1;
 }
+
+#myiframe {
+    margin-left: -150px;
+    margin-right: -150px;
+}
+
+
+
